New installation commands, updated sample config files

--- a/Makefile.in
+++ b/Makefile.in
@@ -75,8 +75,8 @@ install-xinetd:
 	$(INSTALL) -m 644 sample-config/nrpe.xinetd /etc/xinetd.d/nrpe 
 
 install-daemon-config:
-	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DESTDIR)$(CFGDIR)
-	$(INSTALL) -m 644 sample-config/nrpe.cfg $(DESTDIR)$(CFGDIR)
+	$(INSTALL) -m 775 $(NAGIOS_INSTALL_OPTS) -d $(DESTDIR)$(CFGDIR)
+	$(INSTALL) -m 644 $(NRPE_INSTALL_OPTS) sample-config/nrpe.cfg $(DESTDIR)$(CFGDIR)
 
 clean:
 	cd $(SRC_BASE); $(MAKE) $@ ; cd ..
