--- a/configure.in
+++ b/configure.in
@@ -9,9 +9,9 @@ AC_CONFIG_HEADER(include/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="2.8"
+PKG_VERSION="2.8.1"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="05-08-2007"
+PKG_REL_DATE="05-10-2007"
 
 dnl Figure out how to invoke "install" and what install options to use.
 AC_PROG_INSTALL
@@ -259,23 +259,23 @@ if test x$check_for_ssl = xyes; then
 fi
 
 AC_ARG_WITH(nrpe_user,--with-nrpe-user=<user> sets user name to run NRPE,nrpe_user=$withval,nrpe_user=nagios)
-AC_ARG_WITH(nrpe_group,--with-nrpe-group=<group> sets group name to run NRPE,nrpe_grp=$withval,nrpe_group=nagios)
+AC_ARG_WITH(nrpe_group,--with-nrpe-group=<group> sets group name to run NRPE,nrpe_group=$withval,nrpe_group=nagios)
 AC_ARG_WITH(nrpe_port,--with-nrpe-port=<port> sets port number for NRPE to listen on,nrpe_port=$withval,nrpe_port=5666)
 AC_SUBST(nrpe_user)
 AC_SUBST(nrpe_group)
+echo "GROUP: $nrpe_group"
 NRPE_INSTALL_OPTS="-o $nrpe_user -g $nrpe_group"
 AC_SUBST(NRPE_INSTALL_OPTS)
 AC_SUBST(nrpe_port)
 AC_DEFINE_UNQUOTED(DEFAULT_SERVER_PORT,$nrpe_port)
 
-AC_ARG_WITH(nagios_user,--with-nagios-user=<user> sets user name forfile permissions,nagios_user=$withval,nagios_user=nagios)
+AC_ARG_WITH(nagios_user,--with-nagios-user=<user> sets user name for file permissions,nagios_user=$withval,nagios_user=nagios)
 AC_ARG_WITH(nagios_group,--with-nagios-group=<grp> sets group name file permissions,nagios_grp=$withval,nagios_group=nagios)
 AC_SUBST(nagios_user)
 AC_SUBST(nagios_group)
 NAGIOS_INSTALL_OPTS="-o $nagios_user -g $nagios_group"
 AC_SUBST(NAGIOS_INSTALL_OPTS)
 
-A
 
 AC_ARG_ENABLE(command-args,--enable-command-args allows clients to specify command arguments.  *** THIS IS A SECURITY RISK! *** Read the SECURITY file before using this option!,AC_DEFINE_UNQUOTED(ENABLE_COMMAND_ARGUMENTS))
 
@@ -299,9 +299,11 @@ echo ""
 echo " General Options:"
 echo " -------------------------"
 
-AC_MSG_RESULT([ NRPE port:  $nrpe_port])
-AC_MSG_RESULT([ NRPE user:  $nrpe_user])
-AC_MSG_RESULT([ NRPE group: $nrpe_group])
+AC_MSG_RESULT([ NRPE port:    $nrpe_port])
+AC_MSG_RESULT([ NRPE user:    $nrpe_user])
+AC_MSG_RESULT([ NRPE group:   $nrpe_group])
+AC_MSG_RESULT([ Nagios user:  $nagios_user])
+AC_MSG_RESULT([ Nagios group: $nagios_group])
 
 
 echo ""
