--- a/configure.in
+++ b/configure.in
@@ -9,9 +9,9 @@ AC_CONFIG_HEADER(include/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="2.10"
+PKG_VERSION="2.9"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="10-19-2007"
+PKG_REL_DATE="08-13-2007"
 
 dnl Figure out how to invoke "install" and what install options to use.
 AC_PROG_INSTALL
@@ -225,12 +225,17 @@ AC_ARG_ENABLE(ssl,--enable-ssl enables native SSL support,[
 	],check_for_ssl=yes)
 
 dnl Optional SSL library and include paths
+ssl_dir=
 ssl_inc_dir=
+ssl_lib_dir=
 AC_ARG_WITH(ssl,--with-ssl=DIR sets location of the SSL installation,[
 	ssl_dir=$withval
 	])
 AC_ARG_WITH(ssl-inc,--with-ssl-inc=DIR sets location of the SSL include files,[
 	ssl_inc_dir=$withval
+	])
+AC_ARG_WITH(ssl-lib,--with-ssl-lib=DIR sets location of the SSL libraries,[
+	ssl_lib_dir=$withval
 	])
 AC_ARG_WITH(kerberos-inc,--with-kerberos-inc=DIR sets location of the Kerberos include files,[
 	kerberos_inc_dir=$withval
@@ -239,57 +244,77 @@ AC_ARG_WITH(kerberos-inc,--with-kerberos-inc=DIR sets location of the Kerberos i
 dnl Check for SSL support
 dnl Modified version of Mark Ethan Trostler's macro <trostler@juniper.net>
 if test x$check_for_ssl = xyes; then
-	AC_MSG_CHECKING(for SSL)
+	AC_MSG_CHECKING(for SSL headers)
 	found_ssl=no
 	for dir in $ssl_inc_dir $ssl_dir /usr/local/openssl /usr/local/ssl /usr/lib/ssl /usr/ssl /usr/pkg /usr/local /usr /usr/freeware/lib/openssl; do
 		ssldir="$dir"
 		if test -f "$dir/include/openssl/ssl.h"; then
 			found_ssl=yes
 			CFLAGS="$CFLAGS -I$dir/include/openssl -I$ssldir/include"
+			sslincdir="$dir/include/openssl"
 		        break
 		fi
 		if test -f "$dir/include/ssl.h"; then
 			found_ssl=yes
 			CFLAGS="$CFLAGS -I$dir/include"
+			sslincdir="$dir/include"
 		        break
 		fi
 		if test -f "$dir/ssl.h"; then
 			found_ssl=yes
-			CFLAGS="$CFLAGS -I$dir/include"
+			CFLAGS="$CFLAGS -I$dir"
+			sslincdir="$dir"
 			ssldir="$dir/.."
 		        break
 		fi
 		if test -f "$dir/openssl/ssl.h"; then
 			found_ssl=yes
-			CFLAGS="$CFLAGS -I$dir/include"
+			CFLAGS="$CFLAGS -I$dir/openssl"
+			sslincdir="$dir/openssl"
 			ssldir="$dir/.."
 		        break
 		fi
 	done
 
 	if test x_$found_ssl != x_yes; then
-        	AC_MSG_ERROR(Cannot find ssl libraries)
+        	AC_MSG_ERROR(Cannot find ssl headers)
 	else
-	        printf "SSL found in $ssldir\n";
-	        LIBS="$LIBS -lssl -lcrypto";
-		if test x$ssl_lib_dir != x; then
-	        	LDFLAGS="$LDFLAGS -L$ssl_lib_dir";
-		else 
-	        	LDFLAGS="$LDFLAGS -L$ssldir/lib";
-		fi
-		AC_DEFINE_UNQUOTED(HAVE_SSL)
-		AC_SUBST(HAVE_SSL)
-		
-		dnl Generate DH parameters
-		echo ""
-		echo "*** Generating DH Parameters for SSL/TLS ***"
-		if test -f "$ssldir/sbin/openssl"; then
-			sslbin=$ssldir/sbin/openssl
+
+	        printf "SSL headers found in $ssldir\n";
+
+		dnl Now try and find SSL libraries
+		AC_MSG_CHECKING(for SSL libraries)
+		found_ssl=no
+		for dir in $ssl_lib_dir $ssl_dir /usr/lib64 /usr/lib /usr/local/lib /usr/lib/ssl /usr/ssl/lib /usr/openssl/lib /usr/pkg/lib  /usr/freeware/lib/openssl; do
+			ssllibdir="$dir"
+			if test -f "$dir/libssl.so"; then
+				found_ssl=yes
+			        break
+			fi
+		done	
+
+		if test x_$found_ssl != x_yes; then
+        		AC_MSG_ERROR(Cannot find ssl libraries)
 		else
-			sslbin=$ssldir/bin/openssl
+		        printf "SSL libraries found in $ssllibdir\n";
+
+			LDFLAGS="$LDFLAGS -L$ssllibdir";
+		        LIBS="$LIBS -lssl -lcrypto";
+
+			AC_DEFINE_UNQUOTED(HAVE_SSL)
+			AC_SUBST(HAVE_SSL)
+	
+			dnl Generate DH parameters
+			echo ""
+			echo "*** Generating DH Parameters for SSL/TLS ***"
+			if test -f "$ssldir/sbin/openssl"; then
+				sslbin=$ssldir/sbin/openssl
+			else
+				sslbin=$ssldir/bin/openssl
+			fi
+			# awk to strip off meta data at bottom of dhparam output
+			$sslbin dhparam -C 512 | awk '/^-----/ {exit} {print}' > include/dh.h
 		fi
-		# awk to strip off meta data at bottom of dhparam output
-		$sslbin dhparam -C 512 | awk '/^-----/ {exit} {print}' > include/dh.h
 	fi
 
 	dnl RedHat 8.0 and 9.0 include openssl compiled with kerberos, so we must include header file
@@ -320,7 +345,6 @@ AC_ARG_WITH(nrpe_group,--with-nrpe-group=<group> sets group name to run NRPE,nrp
 AC_ARG_WITH(nrpe_port,--with-nrpe-port=<port> sets port number for NRPE to listen on,nrpe_port=$withval,nrpe_port=5666)
 AC_SUBST(nrpe_user)
 AC_SUBST(nrpe_group)
-echo "GROUP: $nrpe_group"
 NRPE_INSTALL_OPTS="-o $nrpe_user -g $nrpe_group"
 AC_SUBST(NRPE_INSTALL_OPTS)
 AC_SUBST(nrpe_port)
